--- a/cppm.yaml
+++ b/cppm.yaml
@@ -1,6 +1,16 @@
 project:
-  name: nieel
-  version: 0.0.1
-  type: static
-  compiler: ""
-  builder: make
+    name: nieel
+    version: 0.0.1
+    authors: 8687lee@gmail.com InJaeLee
+    type: static
+    compiler: gcc-7.3 
+    builder: make
+    
+    
+    thirdparty:
+        boost: 
+            build-type: static
+            install: global
+            version: 1.67.0
+            url: https://dl.bintray.com/boostorg/release/1.67.0/source/boost_1_67_0.tar.gz 
+            find-cmake-value: Boost
