--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,9 @@ set(MODULE_PATH ${CMAKE_MODULE_PATH}/Modules)
 set(BUILD_DIR ${PROJECT_NAME}/build)
 set(third_party_library  )
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -lstdc++fs -g -Wall -pthread -fPIC")
 include(${CMAKE_MODULE_PATH}/cmake_option.cmake)
+option( BUILD_SHARED_LIB "ON is build shared lib" ON)
 include(${CMAKE_MODULE_PATH}/project_maker.cmake)
 make_lib(${PROJECT_NAME})
 
