--- a/cppm.yaml
+++ b/cppm.yaml
@@ -1,16 +1,29 @@
-project:
+package:
     name: nieel
     version: 0.0.1
     authors: 8687lee@gmail.com InJaeLee
     type: shared
-    compiler: g++ 
-    compiler-option: -std=c++17 -lstdc++fs -g -Wall -pthread -fPIC
-    builder: make 
+compiler: 
+   type: g++ 
+   option: -std=c++17 -lstdc++fs -g -Wall -pthread -fPIC
+builder:  
+    type: make
+    core: 1
     
-    thirdparty:
-        boost: 
-            build-type: static
-            install: global
-            version: 1.67.0
-            url: https://dl.bintray.com/boostorg/release/1.67.0/source/boost_1_67_0.tar.gz 
-            find-cmake-value: Boost
+thirdparty:
+    boost: 
+        build-type: static
+        install: global
+        version: 1.67.0
+        url: https://dl.bintray.com/boostorg/release/1.67.0/source/boost_1_67_0.tar.gz 
+        find-cmake-value: Boost
+
+library:
+    util:
+        type: static
+        include:
+            - util/*
+        source:
+            - util/*
+        dependencies: 
+            - boost
