--- a/cppm.yaml
+++ b/cppm.yaml
@@ -2,13 +2,22 @@ package:
     name: nieel
     version: 0.0.1
     authors: 8687lee@gmail.com InJaeLee
-    type: shared
+    type: static 
 compiler: 
    type: g++ 
    option: -std=c++17 -lstdc++fs -g -Wall -pthread -fPIC
 builder:  
     type: make
     core: 1
+    
+library:
+    nieel:
+        type: static
+        source:
+            - src/ 
+        dependencies: 
+            - boost
+            - range-v3
     
 thirdparty:
     boost: 
@@ -17,13 +26,10 @@ thirdparty:
         version: 1.67.0
         url: https://dl.bintray.com/boostorg/release/1.67.0/source/boost_1_67_0.tar.gz 
         find-cmake-value: Boost
+        cmake-lib-name: Boost::boost  
+    range-v3:
+       build-type: header_only
+       install: global
+       url: https://github.com/ericniebler/range-v3.git
+       cmake-lib-name: range-v3
 
-library:
-    util:
-        type: static
-        include:
-            - util/*
-        source:
-            - util/*
-        dependencies: 
-            - boost
