update cppm version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.6)
 
-project(nieel LANGUAGES CXX VERSION 1.0.0.0)
+project(nieel LANGUAGES CXX VERSION 0.1.0.0)
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 set(MODULE_PATH ${CMAKE_MODULE_PATH}/Modules)
@@ -11,9 +11,11 @@ include(${CMAKE_MODULE_PATH}/project_maker.cmake)
 include(${CMAKE_MODULE_PATH}/utils.cmake)
 get_third_party_list()
 set(thirdparty 
+	${Boost_LIBRARIES}
 )
 set(source 
 	src/version.cpp
+	src/main.cpp
 	src/filesystem.cpp
 	src/string.cpp
 	src/url.cpp
@@ -21,6 +23,13 @@ set(source
 )
 build_library(nieel static "${source}" "${thirdparty}")
 
+set(thirdparty 
+	nieel
+)
+set(source 
+	src/main.cpp
+)
+build_binary(nieel-main "${source}" "${thirdparty}")
 
 
 
