--- a/cppm.yaml
+++ b/cppm.yaml
@@ -1,6 +1,6 @@
 package:
     name: nieel
-    version: 1.0.0.0
+    version: 0.1.0
     authors: 8687lee@gmail.com InJaeLee
     type: static 
     thirdparty-repo:
@@ -8,11 +8,11 @@ package:
     
 compiler: 
     type: g++ 
+    luncher: ccache
     option: -std=c++17 -lstdc++fs -g -Wall -pthread -fPIC
    
 builder:  
     type: make
-    luncher: ccache
     option: -j1
     
 library:
@@ -21,14 +21,10 @@ library:
         source:
             - src/.*
         dependencies: 
-            - boost
-
-thirdparty:
-    boost: 
-        build-type: static
-        install: global
-        version: 1.67.0
-        url: https://dl.bintray.com/boostorg/release/1.67.0/source/boost_1_67_0.tar.gz 
-        find-cmake-value: Boost
-        cmake-lib-name: Boost::boost  
-
+            - boost 1.55.0 ${Boost_LIBRARIES}
+binary:
+    nieel-main:
+        source:
+            - src/main.cpp
+        dependencies:
+            - nieel 0.0.0 nieel
