--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(nieel LANGUAGES CXX VERSION 0.1.0.0)
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 set(MODULE_PATH ${CMAKE_MODULE_PATH}/Modules)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -lstdc++fs -g -Wall -pthread -fPIC")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g -Wall -pthread -fPIC")
 include(${CMAKE_MODULE_PATH}/cmake_option.cmake)
 include(${CMAKE_MODULE_PATH}/project_maker.cmake)
 include(${CMAKE_MODULE_PATH}/utils.cmake)
